<resources>
    <string name="app_name">ComunicatProdis</string>
    <string name="oblidar_contrasenya">Has oblidat la contrasenya?</string>
    <string name="button_recuperar">Recuperar</string>
    <string name="email">Email</string>
    <string name="afegir_usuari">AFEGIR USUARI</string>
    <string name="modificar_usuari">MODIFICAR USUARI</string>
    <string name="eliminar_usuari">ELIMINAR USUARI</string>
    <string name="catal">CATALÀ</string>
    <string name="castell">CASTELLÀ</string>
    <string name="angles">ANGLÈS</string>
    <string name="idioma">Idioma</string>
    <string name="usuaris">Usuaris</string>
    <string name="accedir">Accedir</string>
    <string name="imagen_del_logo">imagen del logo</string>
    <string name="has_oblidat_la_contrasenya">Has oblidat la contrasenya?</string>
    <string name="logo_splash_screen">logo Splash Screen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="introdueix_email">Introdueix al teu email</string>
    <string name="todo">TODO</string>
    <string name="textLoginRecuperaPasswd">Has oblidat la contrasenya?</string>
    <string name="btnAccedir">Accedir</string>
    <string name="imputTextLoginGmail">intro gmail</string>
    <string name="imputTextIntro_password">intro password</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="canviar_password">Canviar Password</string>
    <string name="data">data</string>
    <string name="missatge_1">missatge 1</string>
    <string name="missatge2">missatge2</string>
    <string name="missatge3">missatge3</string>
    <string name="missatge5">missatge5</string>
    <string name="missatge4">missatge4</string>
    <string name="nom_xat">Persona/grup</string>
    <string name="xat">Xat contingut</string>
    <string name="InputTextBuscadorChat">Buscar chat</string>
    <string name="button_enviar_xat">ENVIAR</string>
    <string name="hint_enviar_xat">Escriu el missatge aquí</string>
    <string name="nomEnquesta">NomEnquesta</string>
    <string name="nom">nom</string>
    <string name="descripcio">descripcio</string>
    <string name="textAutoritzacio">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="enviar">ENVIAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="fotoPerfil_textView_fotoPerfil">Foto de Perfil</string>
    <string name="fotoPerfil_button_Guardar">Guardar</string>
    <string name="pregunta1_enquesta">Pregunta 1</string>
    <string name="opcio1">Opcio 1</string>
    <string name="opcio2">Opcio 2</string>
    <string name="img_enquestas">img enquestas</string>
    <string name="img_chat">img chat</string>
    <string name="img_circulars">img circulars</string>
    <string name="img_autorizacions">img autorizacions</string>
    <string name="confAutoritzacio_textView_nom">Nom</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="confirAutoritzacio_textView_text">Autoritzo al meu fill a fer la sortida?</string>
    <string name="si">si</string>
    <string name="no">no</string>
    <string name="crear_enquesta">Crear enquesta</string>
    <string name="nomenquesta_creacio">Nom:</string>
    <string name="destinataris_enquesta">Destinataris:</string>
    <string name="nova_pregunta_enquesta">Nova pregunta</string>
    <string name="intro_nom_circular">nom circular</string>
    <string name="enviar_circulars_TextView_destinari_s">destinatari(s)</string>
    <string name="enviar_circular_btn_enviar">ENVIAR</string>
    <string name="enviar_circular_btncancelar">CANCELAR</string>
    <string name="GUARDAR">GUARDAR</string>
    <string name="nom_circular">NOM CIRCULAR</string>
    <string name="tornar">TORNAR</string>
    <string name="Perfil">TextView</string>
    <string name="perfil">Perfil</string>
    <string name="canviar_contrasenya">Canviar Contrasenya</string>
    <string name="img_candado">img_candado</string>
    <string name="nova_contrasenya">Nova contrasenya</string>
    <string name="repetir_contrasenya">Repetir contrasenya</string>
    <string name="btn_acceptar">ACCEPTAR</string>
    <string name="contrasenya2">contrasenya</string>
    <string name="contrasenya">Contrasenya</string>
    <string name="nomusuari">Nom Usuari</string>
    <string name="pablo_gomez">Pablo Gomez</string>
    <string name="direcci">Direcció</string>
    <string name="carrer_sant_pau_15">carrer Sant Pau, 15</string>
    <string name="telefon">Tèlefon</string>
    <string name="_123456789">123456789</string>
    <string name="pere_gomez">Pere Gomez</string>
    <string name="nom_tutor_1">Nom Tutor 1</string>
    <string name="email_tutor_1">Email Tutor 1</string>
    <string name="pere22_gmail_com">pere22@gmail.com</string>
    <string name="nom_tutor_2">Nom Tutor 2</string>
    <string name="marta_rodriguez">Marta Rodriguez</string>
    <string name="marta22_gmail_com">marta22@gmail.com</string>
    <string name="email_tutor_2">Email Tutor 2</string>
    <string name="guardar">GUARDAR</string>
    <string name="textview_has_oblidat_la_contrasenya">Has oblidat la contrasenya?</string>
    <string name="resultats_enquesta">Resultats enquesta</string>
    <string name="resultat_enquesta">n%</string>
    <string name="contentDescription">Contindra els destinataris</string>
    <string name="password">password</string>

</resources>