<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".enviament_enquesta_usuaris">

    <!-- TODO: Update blank fragment layout -->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/nom_enviament_enquesta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/enviament_enquesta_usuaris_textView_marginStart"
            android:layout_marginTop="@dimen/enviament_enquesta_usuaris_textView_marginTop"
            android:text="@string/nomEnquesta"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pregunta1_enviament_enquesta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/pregunta1_enquesta"
            app:layout_constraintTop_toBottomOf="@+id/nom_enviament_enquesta"
            tools:layout_editor_absoluteX="43dp"
            tools:ignore="MissingConstraints" />

        <CheckBox
            android:id="@+id/opcio1_enviament_enquesta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/enviament_enquesta_usuari_checkbox_marginStart"
            android:layout_marginTop="@dimen/enviament_enquesta_usuari_checkbox_marginTop"
            android:text="@string/opcio1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pregunta1_enviament_enquesta" />

        <CheckBox
            android:id="@+id/opcio2_enviament_enquesta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/opcio2"
            app:layout_constraintStart_toEndOf="@id/opcio1_enviament_enquesta"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="148dp" />

        <Button
            android:id="@+id/enviar_enviament_enquesta"
            style="@style/Widget.ComunicaProdis.ButtonConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enviar"
            tools:layout_editor_absoluteX="65dp"
            tools:layout_editor_absoluteY="270dp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/cancelar_enviament_enquesta"
            style="@style/Widget.ComunicaProdis.ButtonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/cancelar"
            app:layout_constraintStart_toEndOf="@+id/enviar_enviament_enquesta"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="270dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>