<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmacioAutoritzacio">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/constraintlayoutTherme">

        <TextView
            android:id="@+id/confirmacioAutoritzacio_Nom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/confirmAutoritzacio_textView_marginTop"
            android:text="@string/confAutoritzacio_textView_nom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/confirmacioAutoritzacio_scroll"
            android:layout_width="match_parent"
            android:layout_height="@dimen/confirmAutoritzacio_scrollView_height"
            android:layout_marginTop="@dimen/confirmAutoritzacio_scrollView_marginTop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmacioAutoritzacio_Nom">

            <TextView
                android:id="@+id/confirmacioAutoritzacio_descripcioAutoritzacio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem" />
        </ScrollView>

        <TextView
            android:id="@+id/confirmacioAutoritzacio_pregunta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/confirmAutoritzacio_textView2_marginTop"
            android:text="@string/confirAutoritzacio_textView_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmacioAutoritzacio_scroll" />

        <RadioGroup
            android:id="@+id/confirmacioAutoritzacio_radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/confirmAutoritzacio_radioGroup_marginTop"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmacioAutoritzacio_pregunta">

            <RadioButton
                android:id="@+id/confirmacioAutoritzacio_radioButton_si"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/confirmAutoritzacio_button_marginRight"
                android:text="@string/si" />

            <RadioButton
                android:id="@+id/confirmacioAutoritzacio_radioButton_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>

        <Button
            android:id="@+id/confirmacioAutoritzacio_button_enviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/confirmAutoritzacio_button2_marginStart"
            android:text="@string/enviar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/confirmacioAutoritzacio_button_Cancelar" />

        <Button
            android:id="@+id/confirmacioAutoritzacio_button_Cancelar"
            style="@style/Widget.ComunicaProdis.ButtonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/confirmAutoritzacio_button3_marginTop"
            android:layout_marginEnd="@dimen/confirmAutoritzacio_button3_marginEnd"
            android:text="@string/cancelar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmacioAutoritzacio_radioGroup" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>