<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/constraintlayoutTherme">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/crearUsuari_contrasenya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/crearUsuari_textView_marginTop"
                android:text="@string/contrasenya"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/crearUsuari_contrasenyaTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crearUsuari_contrasenya">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/crearUsuari_editContrasenya"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textColor="#757575"
                    tools:ignore="TextContrastCheck">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/crearUsuari_nomUsuari"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/nomusuari"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crearUsuari_contrasenyaTextInput" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/crearUsuari_nomUsuariTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crearUsuari_nomUsuari">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/crearUsuari_editnomUsuari"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pablo_gomez"
                    android:minHeight="48dp"
                    android:textColor="#757575"
                    tools:ignore="TextContrastCheck">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/crearUsuari_direccio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/direcci"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crearUsuari_nomUsuariTextInput" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/crearUsuari_direccioTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crearUsuari_direccio">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/crearUsuari_editDireccio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/carrer_sant_pau_15"
                    android:minHeight="48dp"
                    android:textColor="#757575"
                    tools:ignore="TextContrastCheck">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/crearUsuari_telefon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/telefon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crearUsuari_direccioTextInput" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/crearUsuari_telefonTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crearUsuari_telefon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/crearUsuari_editTelefon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/_123456789"
                    android:minHeight="48dp"
                    android:textColor="#757575"
                    tools:ignore="TextContrastCheck">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/crearUsuari_nomTutor1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/nom_tutor_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crearUsuari_telefonTextInput" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/crearUsuari_nomTutor1TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crearUsuari_nomTutor1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/crearUsuari_editnomTutor1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pere_gomez"
                    android:minHeight="48dp"
                    android:textColor="#757575"
                    tools:ignore="TextContrastCheck">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/crearUsuari_emailTutor1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/email_tutor_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crearUsuari_nomTutor1TextInput" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/crearUsuari_emailTutor1TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crearUsuari_emailTutor1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/crearUsuari_editemailTutor1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pere22_gmail_com"
                    android:minHeight="48dp"
                    android:textColor="#757575">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/crearUsuari_nomTutor2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/nom_tutor_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crearUsuari_emailTutor1TextInput" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/crearUsuari_nomTutor2TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crearUsuari_nomTutor2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/crearUsuari_editnomTutor2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/marta_rodriguez"
                    android:minHeight="48dp"
                    android:textColor="#757575">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/crearUsuari_mailTutor2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/email_tutor_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crearUsuari_nomTutor2TextInput" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/crearUsuari_emailTutor2TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crearUsuari_mailTutor2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/crearUsuari_editemailTutor2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/marta22_gmail_com"
                    android:minHeight="48dp"
                    android:textColor="#757575">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/crearUsuari_Guardar"
                style="@style/Widget.ComunicaProdis.ButtonConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/guardar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crearUsuari_emailTutor2TextInput" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
